MarcoKitTests/TestData/error/object9.marco
--before
{a 0 a 1}

--after
5: Duplicating key 'a'
